# lineIntSquaredExponential

./: .gitignore  CMakeLists.txt  README.md  bvn.m  comparison_all_sets.m  comparison_set_2.m  intTwoK.c  intTwoK.mexa64  intTwoK.mexmaci64  intTwoSimps.mexa64  intTwoSimps.mexmaci64  intTwo_BN.m
cmake/: FindMatlab.cmake
src/: intTwoK.c  intTwoK.m  intTwoSimps.c  intTwoSimps.m
